<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pedller4"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"

            android:contentDescription="@string/close"
            android:src="@drawable/ic_baseline_close_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/bebasneue_regular"
            android:text="@string/inscription"
            android:textAllCaps="true"
            android:textColor="@color/noir"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            android:text="@string/nom_prenom"
            android:textAllCaps="true"
            android:textColor="@color/vert"
            android:textSize="13sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nom_et"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/nom"
                android:importantForAutofill="no"
                android:inputType="textPersonName"

                android:paddingStart="15dp"
                android:paddingEnd="15dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <EditText
                android:id="@+id/prenom_et"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/prenom"
                android:importantForAutofill="no"
                android:inputType="textPersonName"

                android:paddingStart="15dp"
                android:paddingEnd="15dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/cin"
            android:textAllCaps="true"
            android:textColor="@color/vert"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cin_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/cin"
            android:importantForAutofill="no"
            android:inputType="number"

            android:paddingStart="15dp"
            android:paddingEnd="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/email"
            android:textAllCaps="true"
            android:textColor="@color/vert"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"

            android:paddingStart="15dp"
            android:paddingEnd="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/adresse"
            android:textAllCaps="true"
            android:textColor="@color/vert"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/adresse_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/adresse"
            android:importantForAutofill="no"
            android:inputType="text"

            android:paddingStart="15dp"
            android:paddingEnd="15dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/telephone"
            android:textAllCaps="true"
            android:textColor="@color/vert"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tel_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/tun_number"
            android:importantForAutofill="no"
            android:inputType="phone"

            android:paddingStart="15dp"
            android:paddingEnd="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/mot_de_passe"
            android:textAllCaps="true"
            android:textColor="@color/vert"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/mdp_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:drawableEnd="@drawable/ic_outline_visibility_24"
            android:hint="@string/mot_de_passe"
            android:importantForAutofill="no"
            android:inputType="textPassword"


            android:paddingStart="15dp"
            android:paddingEnd="15dp" />

        <Button
            android:id="@+id/inscription_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/inscription"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <LinearLayout
            android:id="@+id/connexion_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deja_compte" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/connexion"
                android:textColor="@color/orange" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>
