<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pedller4"
    android:orientation="vertical"
    android:padding="20dp"

    tools:context=".activities.CompteActivity">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:layout_weight="1"

        android:background="@android:color/transparent"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"


        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_weight="2"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebasneue_regular"
            android:text="@string/compte_profil"
            android:textAllCaps="true"
            android:textColor="@color/noir"
            android:textSize="35sp"

            />

        <Button
            android:id="@+id/delete_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_outline_delete_forever_24"
            android:text="@string/supprimer_compte"
            android:textAllCaps="false"
            android:textColor="@color/rouge"

            android:textSize="15sp"


            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="bottom"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"

            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/prenom"
                android:textAllCaps="true"
                android:textColor="@color/vert"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/nom"
                android:textAllCaps="true"
                android:textColor="@color/vert"
                android:textSize="13sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/prenom_et"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_columnWeight="1"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/prenom"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingEnd="15dp" />

            <EditText
                android:id="@+id/nom_et"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_columnWeight="1"
                android:layout_marginStart="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/nom"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"

                android:paddingStart="15dp"
                android:paddingEnd="15dp" />

        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textAllCaps="true"
            android:textColor="@color/vert"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"

            android:paddingStart="15dp"
            android:paddingEnd="15dp" />


        <Button
            android:id="@+id/maj_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/maj"
            android:textAllCaps="true"
            android:textSize="18sp"

            android:textStyle="bold"

            />


    </LinearLayout>


</LinearLayout>
