<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pedller4"
    android:orientation="vertical"

    tools:context=".fragments.PanierFragment">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:layout_margin="20dp"

        android:layout_weight="1"
        android:background="@android:color/transparent"

        android:contentDescription="@string/close"
        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:fontFamily="@font/bebasneue_regular"
        android:text="@string/panier"
        android:textAllCaps="true"
        android:textColor="@color/noir"
        android:textSize="35sp"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/panier_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="6.15"

        />

    <Button
        android:id="@+id/paiement_panier_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_marginTop="50dp"
        android:layout_weight="0.85"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:text="@string/paiement"
        android:textAllCaps="true"

        android:textSize="18sp"
        android:textStyle="bold"

        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>